# folio-backend

./: .gitignore  Cargo.toml
core/: settings.json
data/: projects.json
src/: auth.rs  main.rs  server.rs  types.rs
src/core/: data.rs  mod.rs  settings.rs
