[package]
name = "folio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["macros"] }
actix-web-httpauth = "0.8.2"
awc = "3.7.0"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
